--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.11"
+    "@nuxt/postcss8": "^1.1.3",
+    "@nuxtjs/tailwindcss": "^5.3.5",
+    "autoprefixer": "^10.4.12",
+    "nuxt": "3.0.0-rc.11",
+    "postcss": "^8.4.18",
+    "sass": "^1.55.0",
+    "sass-loader": "10.1.1",
+    "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "defu": "^6.1.0"
   }
 }
