--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^5.3.5",
     "autoprefixer": "^10.4.12",
-    "nuxt": "3.0.0-rc.11",
+    "nuxt": "^3.0.0-rc.11",
     "postcss": "^8.4.18",
+    "postcss-nesting": "^10.2.0",
     "sass": "^1.55.0",
-    "sass-loader": "10.1.1",
+    "sass-loader": "13.1.0",
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
